<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".feature.profile.profile_lawan.ProfileLawanActivity">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:theme="@style/AppTheme.PopupOverlay"
                app:titleTextColor="@color/black" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_vanue"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="50dp"
            android:paddingRight="16dp">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:fontFamily="@font/googlesans_regular"
                    android:hint="@string/fullname"
                    tools:text="@string/dummy_fullname" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:fontFamily="@font/googlesans_regular"
                    android:hint="@string/username"
                    tools:text="@string/dummy_username" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:fontFamily="@font/googlesans_regular"
                    android:hint="@string/email"
                    tools:text="@string/dummy_email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:fontFamily="@font/googlesans_regular"
                    android:hint="@string/phone_number"
                    tools:text="@string/dummy_phone_number" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:gravity="bottom">

            <Button
                    android:id="@+id/btnWhatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="26dp"
                    android:background="@drawable/bg_button_green"
                    android:fontFamily="@font/googlesans_bold"
                    android:padding="16dp"
                    android:drawableStart="@drawable/ic_whatsapp_btn"
                    android:text="@string/whatsapp_pemilik_lobby"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            <Button
                    android:id="@+id/btnLihatPertandingan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="26dp"
                    android:background="@drawable/bg_button_blue"
                    android:fontFamily="@font/googlesans_bold"
                    android:padding="16dp"
                    android:text="@string/lihat_pertandingan"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBar"
            android:layout_alignParentBottom="true">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_profile_icon" />

    </RelativeLayout>


</RelativeLayout>