<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.detail.detail_venue.DetailVenueActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            app:titleTextColor="@color/black"
            android:theme="@style/AppTheme.PopupOverlay"
            android:id="@+id/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        tools:src="@drawable/alibaba"
                        android:scaleType="centerCrop"
                        android:id="@+id/imgVenue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Alibaba Futsal"
                        android:textSize="20sp"
                        android:fontFamily="@font/googlesans_bold"
                        android:textColor="@color/black"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:id="@+id/tvNamaVenue" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_height="wrap_content">

                        <Button
                            android:layout_alignParentLeft="true"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:text="@string/official"
                            android:background="@drawable/btn_rounded"
                            android:textColor="@color/white"
                            android:fontFamily="@font/googlesans_bold"
                            android:textAllCaps="false"
                            android:id="@+id/btnOfficial" />

                        <Button
                            android:layout_alignParentRight="true"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:text="@string/peta"
                            android:background="@drawable/btn_rounded"
                            android:textColor="@color/white"
                            android:fontFamily="@font/googlesans_bold"
                            android:textAllCaps="false"
                            android:id="@+id/btnPeta" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp">

                        <ImageView
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_location_on_black_24dp" />

                        <TextView
                            android:layout_marginLeft="16dp"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvLokasiVenue"
                            tools:text="@string/dummy_text_location"
                            android:fontFamily="@font/googlesans_bold"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_menu"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="16dp"
                        tools:text="Futsal"
                        android:drawablePadding="20dp"
                        android:textSize="12sp"
                        android:id="@+id/tvKategori"
                        android:fontFamily="@font/googlesans_bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mulai_dari"
                        android:textSize="16sp"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="16dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/googlesans_bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Rp 90.000"
                        android:id="@+id/tvHargaVenue"
                        android:textSize="16sp"
                        android:textColor="@color/colorOrange"
                        android:fontFamily="@font/googlesans_bold"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="16dp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitas"
                        android:fontFamily="@font/googlesans_bold"
                        android:textSize="16sp"
                        android:textColor="@color/black" />

                    <android.support.v7.widget.RecyclerView
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:id="@+id/rvFasilitas"
                        android:layout_marginBottom="16dp"
                        app:spanCount="2"
                        tools:itemCount="6"
                        tools:layoutManager="android.support.v7.widget.GridLayoutManager"
                        tools:listitem="@layout/item_fasilitas"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Deskripsi"
                        android:fontFamily="@font/googlesans_bold"
                        android:textSize="16sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tvDeskripsiVenue"
                        tools:text="@string/dummy_text_deskripsi"
                        android:fontFamily="@font/googlesans_medium"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>