<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="32dp"
                android:layout_height="32dp"
                tools:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="@font/googlesans_bold"
                    android:textColor="@color/black"
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    tools:text="Raka Permana Putra" />

                <TextView
                    android:id="@+id/tvLokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kota_bekasi"
                    android:fontFamily="@font/googlesans_medium"
                    android:textAllCaps="true"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imgKategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="imgKategori"
            tools:src="@drawable/ic_football_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layoutProfile"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/googlesans_bold"
                android:textColor="@color/black"
                android:id="@+id/tvJudul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                tools:text="Futsal FunDay Bekasi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/googlesans_regular"
                    android:id="@+id/tvTanggal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="start"
                    android:textSize="10sp"
                    tools:text="19 Agustus 2019" />

                <TextView
                    android:fontFamily="@font/googlesans_regular"
                    android:id="@+id/tvWaktu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:textSize="10sp"
                    tools:text="16:00 - 18:00" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorLine" />

            <TextView
                android:textColor="@color/black"
                android:fontFamily="@font/googlesans_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lawan"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/googlesans_medium"
                    android:id="@+id/tvTeam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="start"
                    android:textSize="10sp"
                    tools:text="3KA29" />

                <TextView
                    android:fontFamily="@font/googlesans_medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/vs"
                    android:textSize="10sp" />

                <TextView
                    android:fontFamily="@font/googlesans_medium"
                    android:id="@+id/tvTeamLawan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="end"
                    android:textSize="10sp"
                    tools:text="Gundar Fc" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorLine" />

            <Button
                android:id="@+id/btnMasukRuangLobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/masuk_ruang_lobby"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>