<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.detail.detail_event.DetailEventActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:titleTextColor="@color/black"
            android:id="@+id/toolbar"
            android:theme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="120dp"
                app:cardCornerRadius="5dp"
                android:layout_height="170dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/imgPosterEvent"
                        android:src="@drawable/ic_launcher_background"
                        android:scaleType="centerCrop"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvNamaEvent"
                    tools:text="Indonesia Juara"
                    android:textSize="18sp"
                    android:fontFamily="@font/googlesans_bold"
                    android:textColor="@color/black"/>
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kategori"
                    android:fontFamily="@font/googlesans_regular"
                    android:textSize="12sp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_menu_katogori"
                    tools:text="Futsal"
                    android:fontFamily="@font/googlesans_regular"
                    android:textSize="12sp"
                    android:drawablePadding="8dp"
                    android:id="@+id/tvEventKategori"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tempat"
                    android:fontFamily="@font/googlesans_regular"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_location_on_black_24dp"
                    tools:text="Kampus STMIK STIE STAN-IM"
                    android:fontFamily="@font/googlesans_regular"
                    android:textSize="12sp"
                    android:drawablePadding="8dp"
                    android:id="@+id/tvEventTempat"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_event"
                    android:fontFamily="@font/googlesans_regular"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_calendar"
                    tools:text="Kampus STMIK STIE STAN-IM"
                    android:fontFamily="@font/googlesans_regular"
                    android:textSize="12sp"
                    android:drawablePadding="8dp"
                    android:id="@+id/tvEventTanggal"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:textSize="16sp"
                    android:fontFamily="@font/googlesans_bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/googlesans_medium"
                    android:id="@+id/tvEventDeskripsi"/>

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</LinearLayout>